Fri 05 Nov 2021 Aleksey
	* Honor --lowercase option while --embed-crc is in action

Mon 01 Nov 2021 And Sch
	* Improve ripemd160 performance

Mon 01 Nov 2021 Aleksey
	* Add --bt-transmission option to create Transmission compatible torrent files

Sun 26 Sep 2021 Aleksey
	* Bugfix: star character at the start of filepath must be ignored

Wed 14 Jul 2021 Aleksey
	* === Version 1.4.2 ===
	* print 'Nothing to verify' when verifying a hash file without a message digest

Wed 14 Jul 2021 Zak Kemble
	* significantly improve file reading performance on Linux/Unix

Sun 11 Jul 2021 Aleksey
	* Bugfix: fix verification of some hash files containing spaces in file paths
	* count unparsed lines of a hash file as errors
	* print line numbers of unparsed lines of a hash file

Thu 07 Jan 2021 Aleksey
	* === Version 1.4.1 ===

Wed 06 Jan 2021 Aleksey
	* look for config file at $HOME/.config/rhash/rhashrc

Mon 04 Jan 2021 Aleksey
	* supported --blake2s, --blake2b options for the BLAKE2 hash functions

Sun 03 Jan 2021 Aleksey
	* Bugfix: fix computing of EDON-R 512 by big data chunks

Thu 24 Dec 2020 Aleksey
	* support --no-detect-by-ext option
	* speed up verification by detecting hash type from file extension

Sun 06 Dec 2020 Aleksey
	* Bugfix: correctly print long paths on Windows

Sun 22 Nov 2020 Aleksey
	* Bugfix: print correct '%{mtime}' when --file-list is specified

Sat 29 Aug 2020 Theodore Ts'o
	* Bugfix: only follow symbolic links when --follow is specified

Wed 22 Jul 2020 Aleksey
	* Bugfix: fix buffer overflow in GOST12

Tue 14 Jul 2020 Aleksey
	* === Version 1.4.0 ===

Sat 11 Jul 2020 Aleksey
	* librhash: supported rhash_get_version() - get library version

Mon 29 Jun 2020 Aleksey
	* Bugfix: fix broken output on Win 7

Sun 19 Apr 2020 Alexey Dokuchaev, Aleksey
	* Bugfix: fix broken 'configure --localedir=<dir>' option

Fri 14 Feb 2020 Fabrice Fontaine
	* Bugfix: fix broken makefile install-so-link target

Tue 07 Jan 2020 Aleksey